2020-03-20  Dirk Eddelbuettel  <edd@debian.org>

	* README.md: Add Debian badge

2020-01-15  Dirk Eddelbuettel  <edd@debian.org>

        * DESCRIPTION (Version, Date): New release 0.4.11

        * configure.ac: Mark as 0.4.11
        * configure: Rebuilt

2020-01-14  Dirk Eddelbuettel  <edd@debian.org>

	* src/utils.cpp (getCallabilitySchedule): Generalize support for
	Bond::Price to fall back to Callability::Price for QL < 1.17

2020-01-13  Dirk Eddelbuettel  <edd@debian.org>

	* DESCRIPTION (Version, Date): Roll minor release

	* src/utils.cpp (makeOption): Update from now-deprecated
	FDEuropeanEngine to FdBlackScholesVanillaEngine
	(getCallabilitySchedule): Update from now-deprecated
	Callability::Price to Bond::Price
	* src/vanilla.cpp (americanOptionEngine): Update from
	now-deprecated FDDividendAmericanEngine and FDAmericanEngine to
	FdBlackScholesVanillaEngine

2019-11-17  Dirk Eddelbuettel  <edd@debian.org>

	* inst/tinytest/*: Converted from RUnit to tinytest
	* inst/unitTests/*: Idem
	* tests/tinytest.R: Idem
	* tests/doRUnit.R: Idem
	* docker/ci/Dockerfile: Add tinytest, remove RUnit

2019-08-24  Dirk Eddelbuettel  <edd@debian.org>

	* DESCRIPTION (Version, Date): Roll minor release

	* src/calendars.cpp (getCalendar): Allow for Null calendar

2019-08-07  Dirk Eddelbuettel  <edd@debian.org>

        * DESCRIPTION (Version, Date): New release 0.4.10

        * configure.ac: Mark as 0.4.10
        * configure: Rebuilt

2019-08-06  Dirk Eddelbuettel  <edd@debian.org>

	* docker/ci/Dockerfile: Add -t unstable to get QuantLib 1.16

2019-08-06  Jeroen Ooms  <jeroenooms@gmail.com>

	* src/Makevars.win: Updated for QuantLib 1.16 (for current and next
	Window toolchain)
	* tools/winlibs.R: Idem

2019-05-15  Dirk Eddelbuettel  <edd@debian.org>

        * DESCRIPTION (Version, Date): New release 0.4.9

        * configure.ac: Mark as 0.4.9
        * configure: Rebuilt

2019-05-14  Dirk Eddelbuettel  <edd@debian.org>
